i changed some text
I added a sentence to the mobile apps sections. big whoop, wanna fight about it?

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
             <i class="ion-social-android-outline"></i>
             <span>MOBILE APPS</span>
-            <p class="separator">Will I be making mobile apps? I don't see why not! </p>
+            <p class="separator">Will I be making mobile apps? I don't see why not! Phone games are cool </p>
 
           </div>
 
