--- a/index.html
+++ b/index.html
@@ -191,65 +191,65 @@
 
         <div class="row portfolio-container">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>App 1</h4>
-              <p>This is simply a placeholder for where I'll put descriptions of my projects/skillsets</p>
-              <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 1"><!--<i class="bx bx-plus"></i--></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                    <h4>10th Day Exercise</h4>
+                    <p>A pre-admission app I developed via Codepen</p>
+                    <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 1"><!--<i class="bx bx-plus"></i--></a>
+                    <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
             </div>
-          </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>App 2</h4>
-              <p>This is simply a placeholder for where I'll put descriptions of my projects/skillsets</p>
-              <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 2"><!--<i class="bx bx-plus"></i>--></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                    <h4>App 2</h4>
+                    <p>This is simply a placeholder for where I'll put descriptions of my projects/skillsets</p>
+                    <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 2"><!--<i class="bx bx-plus"></i>--></a>
+                    <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
             </div>
-          </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>App 3</h4>
-              <p>This is simply a placeholder for where I'll put descriptions of my projects/skillsets</p>
-              <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 3"><!--i class="bx bx-plus"></i>--></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                    <h4>App 3</h4>
+                    <p>This is simply a placeholder for where I'll put descriptions of my projects/skillsets</p>
+                    <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 3"><!--i class="bx bx-plus"></i>--></a>
+                    <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
             </div>
-          </div>
 
-          <!--<div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Web 1</h4>
-              <p>Web</p>
-              <a href="assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Web 1"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
+            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+      <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+      <div class="portfolio-info">
+        <h4>Web 1</h4>
+        <p>This is simply a placeholder for where I'll put descriptions of my projects/skillsets</p>
+        <a href="assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Web 1"></a>
+        <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+      </div>
+    </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Web 2</h4>
-              <p>Web</p>
-              <a href="assets/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Web 2"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-            </div>
-          </div>
+    <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+      <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
+      <div class="portfolio-info">
+        <h4>Web 2</h4>
+        <p>This is simply a placeholder for where I'll put descriptions of my projects/skillsets</p>
+        <a href="assets/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Web 2"></a>
+        <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+      </div>
+    </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Web 3</h4>
-              <p>Web</p>
-              <a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
-            </div>-->
-          </div>
+    <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+      <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+      <div class="portfolio-info">
+        <h4>Web 3</h4>
+        <p>This is simply a placeholder for where I'll put descriptions of my projects/skillsets</p>
+        <a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Web 3"></a>
+        <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+      </div>
+        </div>
 
         </div>
 
