--- a/index.html
+++ b/index.html
@@ -204,20 +204,20 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                 <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                    <h4>App 2</h4>
-                    <p>This is simply a placeholder for where I'll put descriptions of my projects/skillsets</p>
+                    <h4>Taco Cat</h4>
+                    <p>This is my palindrome exercise </p>
                     <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 2"><!--<i class="bx bx-plus"></i>--></a>
-                    <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+                    <a href="https://sad-hoover-809e7d.netlify.app/" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
             </div>
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                 <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                    <h4>App 3</h4>
-                    <p>This is simply a placeholder for where I'll put descriptions of my projects/skillsets</p>
+                    <h4>Sum of All Fears</h4>
+                    <p>Mathematics</p>
                     <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 3"><!--i class="bx bx-plus"></i>--></a>
-                    <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+                    <a href="https://awesome-blackwell-5675cf.netlify.app/" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
             </div>
 
