--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 
             <h1><span class="typed"></span></h1>
-            <p class="typed-items" data-typed-person="Software Developer">Software Developer, Illustrator, Music Producer, You Name It</p>
+            <p class="typed-items" data-typed-person="Software Developer">Software Developer, Illustrator, You Name It</p>
         
             <br />
 
