--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                     <h4>Taco Cat</h4>
                     <p>This is my palindrome exercise </p>
                     <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 2"><!--<i class="bx bx-plus"></i>--></a>
-                    <a href="https://sad-hoover-809e7d.netlify.app/" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+                    <a href="https://taco-cat-809e7d.netlify.app" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
             </div>
 
@@ -217,7 +217,7 @@
                     <h4>Sum of All Fears</h4>
                     <p>Mathematics</p>
                     <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 3"><!--i class="bx bx-plus"></i>--></a>
-                    <a href="https://awesome-blackwell-5675cf.netlify.app/" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+                    <a href="https://sum-of-all-fears-5675cf.netlify.app" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
             </div>
 
