--- a/index.html
+++ b/index.html
@@ -217,7 +217,8 @@
                     <h4>Sum of All Fears</h4>
                     <p>Mathematics</p>
                     <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 3"><!--i class="bx bx-plus"></i>--></a>
-                    <a href="https://sum-of-all-fears-5675cf.netlify.app" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+                    <a href="https://sum-of-all-fears-5675cf.netlify.app/
+                       /" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
             </div>
 
