--- a/index.html
+++ b/index.html
@@ -225,10 +225,10 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-web">
       <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
       <div class="portfolio-info">
-        <h4>Web 1</h4>
-        <p>This is simply a placeholder for where I'll put descriptions of my projects/skillsets</p>
+        <h4>Fizz Buzz</h4>
+        <p>This is a FizzBuzz mini project</p>
         <a href="assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Web 1"></a>
-        <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+        <a href="https://fizzbuzzfizzbuzz.netlify.app/" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
       </div>
     </div>
 
@@ -245,10 +245,10 @@
     <div class="col-lg-4 col-md-6 portfolio-item filter-web">
       <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
       <div class="portfolio-info">
-        <h4>Web 3</h4>
-        <p>This is simply a placeholder for where I'll put descriptions of my projects/skillsets</p>
+        <h4>Sunset Hills</h4>
+        <p>This is an array exercise </p>
         <a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Web 3"></a>
-        <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+        <a href="https://sunset-hills-proj.netlify.app/" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
       </div>
         </div>
 
