--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
 
 
 
-            <ul class="list-unstyled list-social">
+            <!--<ul class="list-unstyled list-social">
                 <li><a href="#"><i class="ion-social-facebook"></i></a></li>
                 <li><a href="#"><i class="ion-social-twitter"></i></a></li>
                 <li><a href="#"><i class="ion-social-instagram"></i></a></li>
                 <li><a href="#"><i class="ion-social-googleplus"></i></a></li>
                 <li><a href="#"><i class="ion-social-tumblr"></i></a></li>
                 <li><a href="#"><i class="ion-social-dribbble"></i></a></li>
-            </ul>
+            </ul>-->
         </div>
     </div>
   </div><!-- End Hero -->
