--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                     <h4>Taco Cat</h4>
                     <p>This is my palindrome exercise </p>
                     <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 2"><!--<i class="bx bx-plus"></i>--></a>
-                    <a href="https://taco-cat-809e7d.netlify.app" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+                    <a href="https://taco-cat-809e7d.netlify.app" class="details-link" title="Taco Cat"><i class="bx bx-link"></i></a>
                 </div>
             </div>
 
@@ -218,7 +218,7 @@
                     <p>Mathematics</p>
                     <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 3"><!--i class="bx bx-plus"></i>--></a>
                     <a href="https://sum-of-all-fears-5675cf.netlify.app/
-                       /" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+                       /" class="details-link" title="Sum of All Fears"><i class="bx bx-link"></i></a>
                 </div>
             </div>
 
@@ -228,7 +228,7 @@
         <h4>Fizz Buzz</h4>
         <p>This is a FizzBuzz mini project</p>
         <a href="assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Web 1"></a>
-        <a href="https://fizzbuzzfizzbuzz.netlify.app/" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+        <a href="https://fizzbuzz-246eec.netlify.app/" class="details-link" title="Fizz Buzz"><i class="bx bx-link"></i></a>
       </div>
     </div>
 
@@ -248,7 +248,7 @@
         <h4>Sunset Hills</h4>
         <p>This is an array exercise </p>
         <a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Web 3"></a>
-        <a href="https://sunset-hills-proj.netlify.app/" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+        <a href="https://sunset-hills-proj.netlify.app/" class="details-link" title="Sunset Hills"><i class="bx bx-link"></i></a>
       </div>
         </div>
 
