--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                     <h4>10th Day Exercise</h4>
                     <p>A pre-admission app I developed via Codepen</p>
                     <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 1"><!--<i class="bx bx-plus"></i--></a>
-                    <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+                    <a href="https://codepen.io/DrRichardPhD/full/yLeXmBe" class="details-link" title="More Details" target="_blank"><i class="bx bx-link"></i></a>
                 </div>
             </div>
 
