--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                     <h4>10th Day Exercise</h4>
                     <p>A pre-admission app I developed via Codepen</p>
                     <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 1"><!--<i class="bx bx-plus"></i--></a>
-                    <a href="https://codepen.io/DrRichardPhD/full/yLeXmBe" class="details-link" title="More Details" target="_blank"><i class="bx bx-link"></i></a>
+                    <a href="https://codepen.io/DrRichardPhD/full/yLeXmBe" class="details-link" title="To-Do List" target="_blank"><i class="bx bx-link"></i></a>
                 </div>
             </div>
 
@@ -216,7 +216,7 @@
                 <div class="portfolio-info">
                     <h4>Sum of All Fears</h4>
                     <p>Mathematics</p>
-                    <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 3"><!--i class="bx bx-plus"></i>--></a>
+                    <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Sum of All Fears"><!--i class="bx bx-plus"></i>--></a>
                     <a href="https://sum-of-all-fears-5675cf.netlify.app/
                        /" class="details-link" title="Sum of All Fears"><i class="bx bx-link"></i></a>
                 </div>
@@ -227,7 +227,7 @@
       <div class="portfolio-info">
         <h4>Fizz Buzz</h4>
         <p>This is a FizzBuzz mini project</p>
-        <a href="assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Web 1"></a>
+        <a href="assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Fizz Buzz"></a>
         <a href="https://fizzbuzz-246eec.netlify.app/" class="details-link" title="Fizz Buzz"><i class="bx bx-link"></i></a>
       </div>
     </div>
@@ -256,7 +256,7 @@
 
       </div>
 
-    <!--</div>-->
+    </div>
     <!-- End Portfolio Section -->
 
    
