--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
               <p class="p-heading">A little about me </p>
               <p class="separator">
-                  I'm a software developer (in training) and freelance artist based in Charlotte, NC. I have experience in C#, HTML/CSS, JQuery/JS, and SQL.
+                  I'm a software developer and freelance artist based in Charlotte, NC. I have experience in C#, HTML/CSS, JQuery/JS, and SQL.
                   I also have a background in manufacturing and warehousing (approx. 6 years) and experience in the customer support/call center industry.
               </p>
             </div>
@@ -197,7 +197,7 @@
                     <h4>10th Day Exercise</h4>
                     <p>A pre-admission app I developed via Codepen</p>
                     <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 1"><!--<i class="bx bx-plus"></i--></a>
-                    <a href="https://codepen.io/DrRichardPhD/full/yLeXmBe" class="details-link" title="To-Do List" target="_blank"><i class="bx bx-link"></i></a>
+                    <a target="_blank" href="https://codepen.io/DrRichardPhD/full/yLeXmBe" class="details-link" title="To-Do List" target="_blank"><i class="bx bx-link"></i></a>
                 </div>
             </div>
 
@@ -207,7 +207,7 @@
                     <h4>Taco Cat</h4>
                     <p>This is my palindrome exercise </p>
                     <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 2"><!--<i class="bx bx-plus"></i>--></a>
-                    <a href="https://taco-cat-809e7d.netlify.app" class="details-link" title="Taco Cat"><i class="bx bx-link"></i></a>
+                    <a target="_blank" href ="https://taco-cat-809e7d.netlify.app" class="details-link" title="Taco Cat"><i class="bx bx-link"></i></a>
                 </div>
             </div>
 
@@ -217,7 +217,7 @@
                     <h4>Sum of All Fears</h4>
                     <p>Mathematics</p>
                     <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Sum of All Fears"><!--i class="bx bx-plus"></i>--></a>
-                    <a href="https://sum-of-all-fears-5675cf.netlify.app/
+                    <a target="_blank" href="https://sum-of-all-fears-5675cf.netlify.app/
                        /" class="details-link" title="Sum of All Fears"><i class="bx bx-link"></i></a>
                 </div>
             </div>
@@ -228,7 +228,7 @@
         <h4>Fizz Buzz</h4>
         <p>This is a FizzBuzz mini project</p>
         <a href="assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Fizz Buzz"></a>
-        <a href="https://fizzbuzz-246eec.netlify.app/" class="details-link" title="Fizz Buzz"><i class="bx bx-link"></i></a>
+        <a target="_blank" href="https://fizzbuzz-246eec.netlify.app/" class="details-link" title="Fizz Buzz"><i class="bx bx-link"></i></a>
       </div>
     </div>
 
@@ -248,7 +248,7 @@
         <h4>Sunset Hills</h4>
         <p>This is an array exercise </p>
         <a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Web 3"></a>
-        <a href="https://sunset-hills-proj.netlify.app/" class="details-link" title="Sunset Hills"><i class="bx bx-link"></i></a>
+        <a target="_blank" href="https://sunset-hills-proj.netlify.app/" class="details-link" title="Sunset Hills"><i class="bx bx-link"></i></a>
       </div>
         </div>
 
@@ -275,8 +275,8 @@
                 <ul class="contact-details">
                   <li><span>1017 Brick Squad Ln</span></li>
                   <li><span>Charlotte, NC </span></li>
-                  <li><span>+1 281 330 8004</span></li>
-                  <li><span>example@example.com</span></li>
+                  <li><span>+1 803-669-8482</span></li>
+                  <li><span>jjdennis843@gmail.com</span></li>
                 </ul>
 
               </div>
