--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                 <h2 class="mb-30">Get in contact</h2>
 
                 <ul class="contact-details">
-                  <li><span>1017 Brick Squad Ln</span></li>
+                  <!--<li><span>6701 Woodthrush Dr</span></li>-->
                   <li><span>Charlotte, NC </span></li>
                   <li><span>+1 803-669-8482</span></li>
                   <li><span>jjdennis843@gmail.com</span></li>
